inventorydeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inventory
spec:
  selector:
    matchLabels:
      app: inventory
  template:
    metadata:
      labels:
        app: inventory
    spec:
      containers:
      - name: inventory
        image: shivaspk/neo-inventory:1.0.0
        resources:
          limits:
            memory: "1024Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: inventory
spec:
  type: NodePort
  selector:
    app: inventory
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 32224
