mssqlsts.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: sqlserverstatefulset
spec:
  serviceName: db-mssql
  replicas: 1
  selector:
    matchLabels:
      app: db
  updateStrategy:
    type: OnDelete
  template:
    metadata:
      labels:
        app: db
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: sql2019
        image: mcr.microsoft.com/mssql/server:2019-latest
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: "2Gi"
          limits:
            memory: "3Gi"
        ports:
        - name: dbport
          containerPort: 1433
        volumeMounts:
        - name: mssqldb
          mountPath: /var/opt/mssql
  volumeClaimTemplates:
  - metadata:
      name: mssqldb
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: hostpath
      resources:
        requests:
          storage: 500Mi

---
apiVersion: v1
kind: Service
metadata:
  name: db-mssql
spec:
  selector:
    app: db
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
  type: NodePort
