productdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product
spec:
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      containers:
      - name: product
        image: shivaspk/neo-product:1.0.0
        resources:
          limits:
            memory: "1024Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: product
spec:
  type: NodePort
  selector:
    app: product
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 32223
